--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+.logo {
+  /* You can adjust the width and height as needed */
+  width: 60px;
+  height: 60px;
+}
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
